# lightc

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: lc.h.0CCA2D6627DCF7B6.idx  lc.h.1B0B3990740614C1.idx  lc_compiler.c.9DE3F9ECA8C693DF.idx  lc_compiler.h.774AB5B73F15D260.idx  lc_compiler.h.C8ECF3FDB1847D80.idx  lc_context.h.4BB5A8E81F80BFDA.idx  lc_error.c.9727535D4A809D06.idx  lc_error.c.CE5DEA132E6DE8F7.idx  lc_error.h.6956053EBC5A5E62.idx  lc_error.h.890AB67BE319FD7E.idx  lc_mem.c.5FECB427CEFB97D3.idx  lc_mem.c.D291CC2D5D16AEE0.idx  lc_mem.h.792297FCAC9C797A.idx  lc_mem.h.E4D183280E976939.idx  lc_tokenizer.c.1EE5EC1C7646BE40.idx  lc_tokenizer.c.4D0CB88B50E4A9B5.idx  lc_types.c.32B852D7FB92942A.idx  lc_types.c.7F128DFF655926D2.idx  lc_types.h.5AF59546058F219F.idx  lc_types.h.AE9415A3AE4A00B7.idx  lc_vm.c.09CDF4B99F3F6940.idx  lc_vm.c.586E83D48250196C.idx  lc_vm.h.9693B88994222488.idx  lc_vm.h.E55DA0CC26FFB37F.idx  main.c.2C9CE805C334654B.idx  main.c.E99F8C234CF3DD37.idx
include/: lc.h  lc_compiler.h  lc_context.h  lc_error.h  lc_mem.h  lc_tokenizer.h  lc_types.h  lc_vm.h
src/: lc_compiler.c  lc_error.c  lc_mem.c  lc_tokenizer.c  lc_types.c  lc_vm.c  main.c
tests/: test1.lc
